--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -15,9 +15,35 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "f = \"raw_data.csv\"\n",
+    "f = \"processing/raw_data.csv\"\n",
     "df = pd.read_csv(f)\n",
-    "df.to_excel(\"raw_data.xlsx\")"
+    "df.to_excel(\"raw_data.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "f = \"processing/clean_cols.csv\"\n",
+    "df = pd.read_csv(f)\n",
+    "df.to_excel(\"clean_cols.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "f = \"processing/units.csv\"\n",
+    "df = pd.read_csv(f)\n",
+    "df.to_excel(\"units.xlsx\", index=False)"
    ]
   }
  ],
