converted all numerical data and data with units to proper numerical format

--- a/Introduction to Data Science - Final Project.ipynb
+++ b/Introduction to Data Science - Final Project.ipynb
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -1393,7 +1393,7 @@
        " (70,))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -1651,7 +1651,7 @@
        "max    24.000000   15.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -2041,7 +2041,7 @@
        "[2164 rows x 70 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Manupulation:"
+    "### Data Manipulation:"
    ]
   },
   {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -3015,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3024,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -3032,19 +3032,7 @@
      "type": "CODE"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process Size\n",
-      "Transistors\n",
-      "Die Size\n",
-      "GPU Clock\n",
-      "TDP\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cols = (\"Process Size\", \"Transistors\", \"Die Size\", \"GPU Clock\", \"TDP\")\n",
     "units = (\"nm\", \"million\", \"mm²\", \"MHz\", \"W\")\n",
@@ -3160,6 +3148,110 @@
     "df.rename(columns={\"Texture Rate\": \"Texture Rate [GTexel/s]\"}, inplace=True)\n",
     "\n",
     "\n",
+    "def opengl_remap(x):\n",
+    "    try:\n",
+    "        if pd.isna(x) or x == \"unknown\":\n",
+    "            return np.nan\n",
+    "        elif x == \"System Shared\" or x == \"System Dependent\":\n",
+    "            return 0\n",
+    "        elif x[:2] == \"ES\":\n",
+    "            return np.float32(x[3:])\n",
+    "        elif x == \"None\":\n",
+    "            return 0\n",
+    "        elif len(x) == 3 and \".\" in x:\n",
+    "            return np.float32(x)\n",
+    "        return np.float32(x[:x.index(\" \")])\n",
+    "    except Exception as e:\n",
+    "        print(e, x)\n",
+    "        return np.float32(x)\n",
+    "\n",
+    "\n",
+    "df[\"OpenGL\"] = df[\"OpenGL\"].map(opengl_remap)\n",
+    "\n",
+    "\n",
+    "def directx_remap(x):\n",
+    "    try:\n",
+    "        if isinstance(x, float):\n",
+    "            return x\n",
+    "        if pd.isna(x) or x == \"unknown\":\n",
+    "            return np.nan\n",
+    "        elif x == \"System Shared\" or x == \"System Dependent\":\n",
+    "            return 0\n",
+    "        if \".\" in x:\n",
+    "            thresh = x.index(\".\")\n",
+    "            return np.float32(x[:thresh+2])\n",
+    "        elif \" \" in x:\n",
+    "            thresh = x.index(\" \")\n",
+    "            return np.float32(x[:thresh])\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e, x)\n",
+    "\n",
+    "\n",
+    "df[\"DirectX\"] = df[\"DirectX\"].map(directx_remap)\n",
+    "\n",
+    "\n",
+    "def cores_remap(x):\n",
+    "    try:\n",
+    "        if isinstance(x, float):\n",
+    "            return x\n",
+    "        if pd.isna(x) or x == \"unknown\":\n",
+    "            return np.nan\n",
+    "        elif x == \"System Shared\" or x == \"System Dependent\":\n",
+    "            return 0\n",
+    "        if \"x\" in x:\n",
+    "            thresh = x.index(\" \")\n",
+    "            return np.float32(x[:thresh]) * np.float32(x[thresh+2:])\n",
+    "        return np.float32(x)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e, x)\n",
+    "\n",
+    "\n",
+    "df[\"CORES\"] = df[\"CORES\"].map(cores_remap)\n",
+    "df.rename(columns={\"CORES\": \"Cores\"}, inplace=True)\n",
+    "\n",
+    "\n",
+    "def outputs_remap(x):\n",
+    "    try:\n",
+    "        if pd.isna(x) or x == \"unknown\":\n",
+    "            return np.nan\n",
+    "        elif x == \"No outputs\":\n",
+    "            return 0\n",
+    "        x = x.replace(\"\\n\", \" \")\n",
+    "        arr = x.split(\" \")\n",
+    "        arr = [i for i in arr if \"x\" in i]\n",
+    "        arr = [i.replace(\"x\", \"\") for i in arr]\n",
+    "        arr = [np.float32(i) for i in arr]\n",
+    "        return np.sum(arr)\n",
+    "    except Exception as e:\n",
+    "        print(e, x)\n",
+    "\n",
+    "\n",
+    "df[\"Outputs\"] = df[\"Outputs\"].map(outputs_remap)\n",
+    "\n",
+    "\n",
+    "def power_connectors_remap(x):\n",
+    "    try:\n",
+    "        if pd.isna(x) or x == \"unknown\":\n",
+    "            return np.nan\n",
+    "        elif x == \"None\":\n",
+    "            return 0\n",
+    "        elif x == \"Floppy\":\n",
+    "            return 1\n",
+    "        x = x.replace(\" + \", \" \")\n",
+    "        arr = x.split(\" \")\n",
+    "        arr = [i for i in arr if \"x\" in i and len(i) == 2]\n",
+    "        arr = [i.replace(\"x\", \"\") for i in arr]\n",
+    "        arr = [np.float32(i) for i in arr]\n",
+    "        return np.sum(arr)\n",
+    "    except Exception as e:\n",
+    "        print(e, x)\n",
+    "\n",
+    "\n",
+    "df[\"Power Connectors\"] = df[\"Power Connectors\"].map(power_connectors_remap)\n",
+    "\n",
+    "\n",
     "def fp32_unit_remap(x):\n",
     "    try:\n",
     "        if pd.isna(x) or x == \"unknown\":\n",
@@ -3215,14 +3307,29 @@
     "\n",
     "\n",
     "for i, (col, unit) in enumerate(zip(cols, units)):\n",
-    "    print(col)\n",
     "    df[col] = df[col].map(unit_remap)\n",
     "    df.rename(columns={col: f\"{col} [{unit}]\"}, inplace=True)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting categorical columns to numbers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols = (\"Foundry\", \"Production\", \"Memory Type\", \"Slot Width\", \"Manufacturer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "datalore": {
      "hide_input_from_viewers": false,
@@ -3258,16 +3365,16 @@
       " 15  Texture Rate [GTexel/s]            2158 non-null   float64\n",
       " 16  Slot Width                         1851 non-null   object \n",
       " 17  TDP [W]                            1567 non-null   float64\n",
-      " 18  Outputs                            2158 non-null   object \n",
-      " 19  Power Connectors                   1346 non-null   object \n",
-      " 20  DirectX                            2093 non-null   object \n",
-      " 21  OpenGL                             2086 non-null   object \n",
+      " 18  Outputs                            2158 non-null   float64\n",
+      " 19  Power Connectors                   1346 non-null   float64\n",
+      " 20  DirectX                            2093 non-null   float64\n",
+      " 21  OpenGL                             2086 non-null   float64\n",
       " 22  Manufacturer                       2164 non-null   object \n",
-      " 23  CORES                              1309 non-null   object \n",
+      " 23  Cores                              1309 non-null   float64\n",
       " 24  Shading Units                      1308 non-null   float64\n",
       " 25  FP32 (float) performance [TFLOPS]  1308 non-null   float64\n",
       " 26  Shader Model                       1561 non-null   float64\n",
-      "dtypes: float64(16), int64(1), object(10)\n",
+      "dtypes: float64(21), int64(1), object(5)\n",
       "memory usage: 456.6+ KB\n"
      ]
     }
@@ -3278,7 +3385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
