--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "f = \"processing/raw_data.csv\"\n",
+    "f = \"raw_data.csv\"\n",
     "df = pd.read_csv(f)\n",
     "df.to_excel(\"raw_data.xlsx\", index=False)"
    ]
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
