finalised data cleaning and filling

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -45,6 +45,32 @@
     "df = pd.read_csv(f)\n",
     "df.to_excel(\"units.xlsx\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "f = \"processing/numeric.csv\"\n",
+    "df = pd.read_csv(f)\n",
+    "df.to_excel(\"numeric.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "f = \"processing/ready.csv\"\n",
+    "df = pd.read_csv(f)\n",
+    "df.to_excel(\"ready.xlsx\", index=False)"
+   ]
   }
  ],
  "metadata": {
