updated machine learning notebook

--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to use regression on the `FP32 (float) performance [TFLOPS]` column. Therefore:"
+    "As the first example, we are going to use regression on the `Pixel Rate [GPixel/s]` column. Therefore:"
    ]
   },
   {
