fixed code formatting

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -817,8 +817,10 @@
    "outputs": [],
    "source": [
     "mode = (\"Foundry\", \"Production\", \"Memory Type\", \"Slot Width\", \"Manufacturer\")\n",
-    "median = (\"Process Size [nm]\", \"Year\", \"Die Size [mm²]\", \"Memory Bus [bit]\", \"TMUs\", \"ROPs\", \"TDP [W]\", \"Outputs\", \"Power Connectors\", \"DirectX\", \"OpenGL\", \"Cores\", \"Shading Units\", \"Shader Model\")\n",
-    "mean = (\"Transistors [million]\", \"GPU Clock [MHz]\", \"Memory Clock [MHz]\", \"Memory Size [GB]\", \"Bandwidth [GB/s]\", \"Pixel Rate [GPixel/s]\", \"Texture Rate [GTexel/s]\", \"FP32 (float) performance [TFLOPS]\")\n",
+    "median = (\"Process Size [nm]\", \"Year\", \"Die Size [mm²]\", \"Memory Bus [bit]\", \"TMUs\", \"ROPs\",\n",
+    "          \"TDP [W]\", \"Outputs\", \"Power Connectors\", \"DirectX\", \"OpenGL\", \"Cores\", \"Shading Units\", \"Shader Model\")\n",
+    "mean = (\"Transistors [million]\", \"GPU Clock [MHz]\", \"Memory Clock [MHz]\", \"Memory Size [GB]\",\n",
+    "        \"Bandwidth [GB/s]\", \"Pixel Rate [GPixel/s]\", \"Texture Rate [GTexel/s]\", \"FP32 (float) performance [TFLOPS]\")\n",
     "\n",
     "for col in mode:\n",
     "    df[col].fillna(df[col].mode()[0], inplace=True)\n",
