fixed code formatting

--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -713,13 +713,14 @@
    },
    "outputs": [],
    "source": [
-    "categorical = (\"Foundry\", \"Production\", \"Memory Type\", \"Slot Width\", \"Manufacturer\")\n",
+    "categorical = (\"Foundry\", \"Production\", \"Memory Type\",\n",
+    "               \"Slot Width\", \"Manufacturer\")\n",
     "val_dict = dict()\n",
     "for col in categorical:\n",
     "    unique = df[col].unique()\n",
     "    unique = unique[~pd.isna(unique)]\n",
     "    val_dict[col] = {u: i for u, i in zip(unique, range(len(unique)))}\n",
-    "    df[col].replace(val_dict[col], inplace=True)"
+    "    df[col].replace(val_dict[col], inplace=True)\n"
    ]
   },
   {
@@ -827,7 +828,7 @@
     "for col in median:\n",
     "    df[col].fillna(df[col].median(), inplace=True)\n",
     "for col in mean:\n",
-    "    df[col].fillna(df[col].mean(), inplace=True)"
+    "    df[col].fillna(df[col].mean(), inplace=True)\n"
    ]
   },
   {
