--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -21,10 +21,8 @@
     "import eli5\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import accuracy_score, r2_score\n",
-    "from IPython.core.display import HTML\n"
+    "from sklearn.metrics import r2_score\n"
    ]
   },
   {
