--- a/Data Processing.ipynb
+++ b/Data Processing.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n"
    ]
   },
   {
@@ -47,7 +47,8 @@
    "outputs": [],
    "source": [
     "folder = \"manufacturers\"\n",
-    "manufacturers = (\"3dfx\", \"AMD\", \"ATI\", \"Intel\", \"Matrox\", \"NVIDIA\", \"Sony\", \"XGI\")\n",
+    "manufacturers = (\"3dfx\", \"AMD\", \"ATI\", \"Intel\",\n",
+    "                 \"Matrox\", \"NVIDIA\", \"Sony\", \"XGI\")\n",
     "\n",
     "ROWS = []\n",
     "\n",
@@ -60,7 +61,7 @@
     "        ROWS.append(row)\n",
     "\n",
     "\n",
-    "df = pd.DataFrame(ROWS)"
+    "df = pd.DataFrame(ROWS)\n"
    ]
   },
   {
@@ -83,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "df.columns"
+    "df.columns\n"
    ]
   },
   {
@@ -99,7 +100,7 @@
    "source": [
     "cols = ['GRAPHICS PROCESSOR', 'PIXEL SHADERS', 'VERTEX SHADERS',\n",
     "        'TMUS', 'ROPS', 'MEMORY SIZE', 'MEMORY TYPE', 'BUS WIDTH', 'Current Price']\n",
-    "df.drop(columns=cols, inplace=True)"
+    "df.drop(columns=cols, inplace=True)\n"
    ]
   },
   {
@@ -113,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"raw_data.csv\", index=False)"
+    "df.to_csv(\"raw_data.csv\", index=False)\n"
    ]
   },
   {
@@ -127,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"raw_data.csv\")"
+    "df = pd.read_csv(\"raw_data.csv\")\n"
    ]
   },
   {
@@ -150,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "df.columns, df.columns.shape"
+    "df.columns, df.columns.shape\n"
    ]
   },
   {
@@ -164,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "df.describe()"
+    "df.describe()\n"
    ]
   },
   {
@@ -178,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "df"
+    "df\n"
    ]
   },
   {
@@ -215,7 +216,7 @@
     "\n",
     "ratio = 0.6\n",
     "cols = notnull[notnull > ratio * N]\n",
-    "df[cols.index].to_csv(\"processing/clean_cols.csv\", index=False)"
+    "df[cols.index].to_csv(\"processing/clean_cols.csv\", index=False)\n"
    ]
   },
   {
@@ -238,7 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"processing/clean_cols.csv\")"
+    "df = pd.read_csv(\"processing/clean_cols.csv\")\n"
    ]
   },
   {
@@ -256,7 +257,7 @@
     "               \"Generation\", \"Predecessor\", \"Bus Interface\", \"GPU Variant\"]\n",
     "df.drop(columns=unnecessary, inplace=True)\n",
     "df[df.isnull().sum(axis=1) < len(df.columns)/2]\n",
-    "df.to_csv(\"processing/clean_cols.csv\", index=False)"
+    "df.to_csv(\"processing/clean_cols.csv\", index=False)\n"
    ]
   },
   {
@@ -270,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "df.columns"
+    "df.columns\n"
    ]
   },
   {
@@ -300,7 +301,7 @@
     "\n",
     "for col in cols:\n",
     "    print(col, df[col].unique())\n",
-    "    print(\"\\n\\n\")"
+    "    print(\"\\n\\n\")\n"
    ]
   },
   {
@@ -314,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"processing/clean_cols.csv\")"
+    "df = pd.read_csv(\"processing/clean_cols.csv\")\n"
    ]
   },
   {
@@ -625,7 +626,8 @@
    },
    "outputs": [],
    "source": [
-    "categorical_cols = (\"Foundry\", \"Production\", \"Memory Type\", \"Slot Width\", \"Manufacturer\")"
+    "categorical_cols = (\"Foundry\", \"Production\", \"Memory Type\",\n",
+    "                    \"Slot Width\", \"Manufacturer\")\n"
    ]
   },
   {
@@ -639,7 +641,7 @@
    },
    "outputs": [],
    "source": [
-    "df.info()"
+    "df.info()\n"
    ]
   },
   {
@@ -653,7 +655,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"processing/units.csv\", index=False)"
+    "df.to_csv(\"processing/units.csv\", index=False)\n"
    ]
   },
   {
@@ -667,7 +669,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"processing/units.csv\")"
+    "df = pd.read_csv(\"processing/units.csv\")\n"
    ]
   },
   {
@@ -681,7 +683,7 @@
    },
    "outputs": [],
    "source": [
-    "df"
+    "df\n"
    ]
   },
   {
@@ -734,7 +736,7 @@
    },
    "outputs": [],
    "source": [
-    "val_dict"
+    "val_dict\n"
    ]
   },
   {
@@ -757,7 +759,7 @@
    },
    "outputs": [],
    "source": [
-    "sns.heatmap(df.corr())"
+    "sns.heatmap(df.corr())\n"
    ]
   },
   {
@@ -771,7 +773,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"processing/numeric.csv\", index=False)"
+    "df.to_csv(\"processing/numeric.csv\", index=False)\n"
    ]
   },
   {
@@ -803,7 +805,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"processing/numeric.csv\")"
+    "df = pd.read_csv(\"processing/numeric.csv\")\n"
    ]
   },
   {
@@ -842,7 +844,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"processing/ready.csv\", index=False)"
+    "df.to_csv(\"processing/ready.csv\", index=False)\n"
    ]
   }
  ],
