--- a/Data Scraping.ipynb
+++ b/Data Scraping.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "def wait():\n",
     "    r = random.uniform(3, 10)\n",
-    "    sleep(r)"
+    "    sleep(r)\n"
    ]
   },
   {
@@ -52,14 +52,16 @@
     "# option.add_argument(\"--user-data-dir=C:/Users/adama/AppData/Local/Google/Chrome/User Data\")\n",
     "option.add_argument('--disable-blink-features=AutomationControlled')\n",
     "option.add_experimental_option(\"useAutomationExtension\", False)\n",
-    "option.add_experimental_option(\"excludeSwitches\",[\"enable-automation\"])\n",
+    "option.add_experimental_option(\"excludeSwitches\", [\"enable-automation\"])\n",
     "\n",
-    "#Open Browser\n",
-    "driver = webdriver.Chrome(executable_path='chromedriver.exe',options=option)\n",
-    "driver.execute_script(\"Object.defineProperty(navigator, 'webdriver', {get: () => undefined})\")\n",
+    "# Open Browser\n",
+    "driver = webdriver.Chrome(executable_path='chromedriver.exe', options=option)\n",
+    "driver.execute_script(\n",
+    "    \"Object.defineProperty(navigator, 'webdriver', {get: () => undefined})\")\n",
     "\n",
     "site = \"https://www.techpowerup.com/gpu-specs/?mfgr={manufacturer}\"\n",
-    "manufacturers = (\"3dfx\", \"AMD\", \"ATI\", \"Intel\", \"Matrox\", \"NVIDIA\", \"Sony\", \"XGI\")"
+    "manufacturers = (\"3dfx\", \"AMD\", \"ATI\", \"Intel\",\n",
+    "                 \"Matrox\", \"NVIDIA\", \"Sony\", \"XGI\")\n"
    ]
   },
   {
@@ -73,7 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "ROWS = []"
+    "ROWS = []\n"
    ]
   },
   {
@@ -104,8 +106,8 @@
     "    for name, address in zip(names, addresses):\n",
     "        row = {\"Name\": name, \"Link\": address, \"Year\": year}\n",
     "        ROWS.append(row)\n",
-    "        \n",
-    "    wait()"
+    "\n",
+    "    wait()\n"
    ]
   },
   {
@@ -120,7 +122,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(ROWS)\n",
-    "df"
+    "df\n"
    ]
   },
   {
@@ -134,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(f\"{manufacturer}.csv\")"
+    "df.to_csv(f\"{manufacturer}.csv\")\n"
    ]
   },
   {
@@ -148,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "manufacturer = manufacturers[7]"
+    "manufacturer = manufacturers[7]\n"
    ]
   },
   {
@@ -162,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "ROWS = []"
+    "ROWS = []\n"
    ]
   },
   {
@@ -180,7 +182,7 @@
     "# df = df.drop(columns=[\"Unnamed: 0\"])\n",
     "for i, row in df.iterrows():\n",
     "    ROWS.append(dict(row))\n",
-    "ROWS"
+    "ROWS\n"
    ]
   },
   {
@@ -200,13 +202,13 @@
     "        wait()\n",
     "        celems = driver.find_elements(By.CLASS_NAME, \"gpudb-specs-large__title\")\n",
     "        relems = driver.find_elements(By.CLASS_NAME, \"gpudb-specs-large__value\")\n",
-    "        ROWS[i].update({c.text:r.text for c, r in zip(celems, relems)})\n",
+    "        ROWS[i].update({c.text: r.text for c, r in zip(celems, relems)})\n",
     "        clearfix = driver.find_elements(By.CLASS_NAME, \"clearfix\")\n",
     "        for c in clearfix:\n",
     "            celems = c.find_elements(By.TAG_NAME, \"dt\")\n",
     "            relems = c.find_elements(By.TAG_NAME, \"dd\")\n",
-    "            ROWS[i].update({c.text:r.text for c, r in zip(celems, relems)})\n",
-    "        wait()"
+    "            ROWS[i].update({c.text: r.text for c, r in zip(celems, relems)})\n",
+    "        wait()\n"
    ]
   },
   {
@@ -221,7 +223,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(ROWS)\n",
-    "df"
+    "df\n"
    ]
   },
   {
@@ -235,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "ROWS[-1]"
+    "ROWS[-1]\n"
    ]
   },
   {
@@ -252,7 +254,7 @@
     "# save list:\n",
     "import pickle\n",
     "with open(\"ROWS.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(ROWS, f)"
+    "    pickle.dump(ROWS, f)\n"
    ]
   },
   {
@@ -269,7 +271,7 @@
     "# read list:\n",
     "import pickle\n",
     "with open(\"ROWS.pickle\", \"rb\") as f:\n",
-    "    ROWS = pickle.load(f)"
+    "    ROWS = pickle.load(f)\n"
    ]
   },
   {
@@ -283,7 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv(f\"manufacturers/{manufacturer}.csv\", index=False)"
+    "df.to_csv(f\"manufacturers/{manufacturer}.csv\", index=False)\n"
    ]
   },
   {
