--- a/Machine Learning.ipynb
+++ b/Machine Learning.ipynb
@@ -470,7 +470,7 @@
     }
    ],
    "source": [
-    "df.info()"
+    "df.info()\n"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "\n",
     "for col in cols:\n",
     "    clf, score = procedure(df, col)\n",
-    "    accs.update({col: (clf, score)})"
+    "    accs.update({col: (clf, score)})\n"
    ]
   },
   {
@@ -561,7 +561,8 @@
     }
    ],
    "source": [
-    "{col: score for col, (_, score) in sorted(accs.items(), key=lambda x: x[1][1], reverse=True)}"
+    "{col: score for col, (_, score) in sorted(\n",
+    "    accs.items(), key=lambda x: x[1][1], reverse=True)}\n"
    ]
   },
   {
@@ -985,7 +986,7 @@
     }
    ],
    "source": [
-    "eli5.show_weights(clf, feature_names=list(feature_names), top=50)"
+    "eli5.show_weights(clf, feature_names=list(feature_names), top=50)\n"
    ]
   }
  ],
